tests/baselines/reference/for-of35.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of35.ts(1,10): error TS7022: 'v' implicitly has type 'any' because it is does not have a type annotation and is referenced directly or indirectly in its own initializer.


==== tests/cases/conformance/es6/for-ofStatements/for-of35.ts (1 errors) ====
    for (var v of new StringIterator) { }
             ~
!!! error TS7022: 'v' implicitly has type 'any' because it is does not have a type annotation and is referenced directly or indirectly in its own initializer.
    
    class StringIterator {
        next() {
            return {
                done: true,
                value: v
            }
        }
        
        [Symbol.iterator]() {
            return this;
        }
    }